crates/tm-exec/tests/snapshots/path_graph_selector@set_several.snap
---
source: crates/tm-exec/tests/path_graphs.rs
expression: text
---
SELECT p0."end" AS c0 FROM tm_path(?1, ?2, ?3, ?4, ?5, ?6) AS p0
-- params: 6
